updated homepage text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Testing</title>
 	</head>
 	<body>
-		<h1>MMP240 Test 1</h1>
-		<p>Thank you github!</p>
+		<h1>MMP240 Test 2</h1>
+		<p>Did the change work?</p>
 	</body>
 </html>
